# parboil

./: .editorconfig  .gitignore  .gitmodules  README.md  changelog.md  mkdocs.yml  parboil-runner.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
docs/: cli.md  overview.md
docs/assets/: styles.css  termynal.js
docs/recipes/: howto.md  ingredients.md
docs/reference/: recipes.md  renderer.md
parboil/: console.py  errors.py  ext.py  fields.py  helpers.py  logger.py  parboil.py  project.py  renderer.py  tasks.py  version.py
src/parboil/: console.py  ingredients.py  parboil.py  recipes.py  renderer.py  settings.py
test/: config.json  test_boil.py
test/templates/test/: project.json  project_2.json
test/templates/test/includes/: c.txt  (+1 more)
tests/: config.json  conftest.py  test_boil.py  test_boil_install.py  test_boil_list.py  test_boil_use.py  test_config.py  test_env.py  test_fixtures.py  test_project.py  test_repo.py  test_symlinks.py
tests/repo/environ/: .parboil  project.json
tests/repo/test/: .parboil  project.json
tests/templates/click/: README.md  parboil.json  project.json  project.yaml
tests/templates/click/template/: .gitignore  CHANGELOG.md  README.rst  pyproject.toml
tests/templates/click/template/src/{{PackageName}}/: __init__.py  __main__.py  console.py  version.py  {{PackageName}}.py
tests/templates/click/template/tests/: conftest.py  test_{{ScriptName}}.py
tests/templates/docs/: parboil.json  parboil.toml
tests/templates/hello_world/: project.json
tests/templates/test/: parboil.json  parboil.yaml  project.json
(+13 files in other folders)
